<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ecoapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_registerFragment"
            app:destination="@id/nav_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.ecoapp.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_nav_registerFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.ecoapp.ui.list.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_editFragment"
            app:destination="@id/nav_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.ecoapp.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.ecoapp.EditFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_nav_ediFragment_to_nav_listFragment"
            app:destination="@id/nav_list" />
    </fragment>
</navigation>