<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/green_700"
    app:cardCornerRadius="@dimen/radius"
    app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewSupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supplier"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDelete"
                android:padding="4dp"
                android:background="@null"
                android:tint="@color/brown_200"
                app:srcCompat="@drawable/ic_delete"
                />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEdit"
                android:padding="4dp"
                android:background="@null"
                android:tint="@color/brown_200"
                app:srcCompat="@drawable/ic_edit"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
